--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 #TODO Set correct client ID value
-oauth.clientId=
+oauth.clientId=752197038707-97e1285dfenane8ic5ljgdqlorubr1ml.apps.googleusercontent.com
